--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "imagekit": "^5.2.0",
+    "mongoose": "^8.6.3",
     "nodemon": "^3.1.4"
   }
 }
