--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "@google/generative-ai": "^0.19.0",
     "@tanstack/react-query": "^5.59.0",
     "imagekitio-react": "^4.2.0",
-    "react": "19.0.0-rc-8b08e99e-20240713",
+    "react": "^18.3.1",
     "react-dom": "19.0.0-rc-8b08e99e-20240713",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.1",
