--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "@tanstack/react-query": "^5.59.0",
     "imagekitio-react": "^4.2.0",
     "react": "^18.3.1",
-    "react-dom": "19.0.0-rc-8b08e99e-20240713",
+    "react-dom": "^18.0.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.1",
     "react-type-animation": "^3.2.0"
